Improve folder structure

--- a/README.adoc
+++ b/README.adoc
@@ -1,116 +1,3 @@
-= image:header.png[ALPHA SET]
-:imagesdir: doc/resources
+*Welcome to BigClown Labs’ Documentation Git repository!*
 
-_Welcome to BigClown Labs’ Alpha Set Git repository!_
-
-
-== What is it?
-
-The Alpha Set is a bundle of hardware and software components enabling you to easily build your next home *Internet-of-Things* (IoT) projects.
-Our system is extremely modular.
-The individual modules provide various communication interfaces, sensors and actuators.
-And the best part?
-It is all open-source!
-
-With this system you can instantly:
-
-* Monitor *temperature*
-* Monitor *humidity*
-* Monitor *CO2 concentration* (carbon dioxide)
-* Monitor *light intensity*
-* Monitor *atmospheric pressure*
-* Monitor *altitude*
-* Control *relays*
-
-We have a lot of ideas where to go next, but let’s call it _THE START_. :-)
-The next priority is to make the nodes wireless and battery-operated.
-
-Our software platform builds on proven internet standards, protocols and components which are easy to integrate into your home automation application.
-
-
-== Hardware configuration
-
-You can see the example hardware configuration in the picture below:
-
-image::hardware_example.png[Hardware configuration example]
-
-
-== System concept
-
-The system concept of the Alpha Set is best presented by the following block diagram:
-
-image::system_concept.png[System concept diagram]
-
-
-== Where do I get it?
-
-Well, our project has not officially started yet.
-That’s why we call this early stage as “alpha”. :-)
-
-We work hard to launch our e-shop by the beginning of October.
-However, if you want to get the Alpha Set or any of its substantial components earlier, please contact us at:
-
-image:alan.png[alan at bigclown dot com]
-
-
-== How do I get started?
-
-For the very first steps please see one of the following links:
-
-* Quick Start Guide in English (coming soon)
-* https://www.bigclown.com/alpha[Quick Start Guide in Czech]
-
-
-== Software setup
-
-The Alpha Set hardware might be connected to either an *embedded* or *desktop* platform.
-
-*Click on one* of the corresponding configuration below for further instructions:
-
-
-=== Embedded Platform
-
-* link:/doc/raspberry-pi.adoc[*Raspberry Pi*] (model 2 and 3 is supported)
-
-
-=== Desktop Platform
-
-* link:doc/macos.adoc[*macOS*] (version 10.10+ is supported)
-* link:doc/ubuntu.adoc[*Ubuntu Desktop*] (version 16.04 LTS is supported)
-* link:doc/windows.adoc[*Windows*] (version 7, 8.x & 10 is supported)
-
-
-== Where to go next?
-
-If you want to learn about our hardware design internals or provide feedback on it, please check our link:/hardware[hardware folder] where you will find:
-
-* link:hardware/sch[Schematic drawings]
-* link:hardware/asm[Assembly drawings]
-
-We design all the hardware in Eagle and the related design files altogether with the libraries will be released later (sometimes in October).
-
-If you have any ideas to share about the overall concept, products or software, please contact us at:
-
-image:support.png[support dot bigclown dot com]
-
-Also do not hesitate to let us know if you come across any issues.
-We have enabled Issue Tracker or you can tell us on the e-mail address above.
-
-
-== Spread the word
-
-We appreciate every single follower.
-If you like our idea, please help up us to spread the word about this project.
-
-Follow us on Twitter and Facebook:
-
-* https://twitter.com/bigclownlabs
-* https://www.facebook.com/bigclownlabs
-
-And don’t forget to add this repository to your watch-list.
-
-Thanks and have fun!
-
-*— Your enthusiastic team of clowns, BIG CLOWNS!*
-
-image::diy_not_dead.png[DIY is not dead!]
+link:alpha[Click here] for **Alpha Set** documentation.
