Use xrefs instead of general links
xrefs correctly handles files extension based on the converter (i.e.
adds .html in generated HTML output or .adoc when viewing directly on
GitHub).

--- a/source/index.adoc
+++ b/source/index.adoc
@@ -1,3 +1,3 @@
 *Welcome to BigClown Labs’ Documentation Git repository!*
 
-link:alpha[Click here] for **Alpha Set** documentation.
+<<alpha/index#, Click here>> for **Alpha Set** documentation.
