--- a/source/alpha/index.adoc
+++ b/source/alpha/index.adoc
@@ -70,14 +70,14 @@ The Alpha Set hardware might be connected to either an *embedded* or *desktop* p
 
 === Embedded Platform
 
-* link:raspberry-pi.adoc[*Raspberry Pi*] (model 2 and 3 is supported)
+* <<raspberry-pi#, *Raspberry Pi*>> (model 2 and 3 is supported)
 
 
 === Desktop Platform
 
-* link:macos.adoc[*macOS*] (version 10.10+ is supported)
-* link:ubuntu.adoc[*Ubuntu Desktop*] (version 16.04 LTS is supported)
-* link:windows.adoc[*Windows*] (version 7, 8.x & 10 is supported)
+* <<macos#, *macOS*>> (version 10.10+ is supported)
+* <<ubuntu#, *Ubuntu Desktop*>> (version 16.04 LTS is supported)
+* <<windows#, *Windows*>> (version 7, 8.x & 10 is supported)
 
 
 == Where to go next?
