--- a/source/alpha/_configure-vbox-docker.adoc
+++ b/source/alpha/_configure-vbox-docker.adoc
@@ -1,3 +1,4 @@
+:imagesdir: images
 :host-name-s: mac
 ifdef::host-win[:host-name-s: win]
 
@@ -9,10 +10,10 @@ ifdef::host-win[:host-name-s: win]
 . Start *Oracle VM VirtualBox*.
 
 . Add USB config for FT260 of default virtual machine.
-image:resources/vbox-usb-{host-name-s}.png[Screenshot of USB ports setting dialog in VirtualBox]
+image:vbox-usb-{host-name-s}.png[Screenshot of USB ports setting dialog in VirtualBox]
 
 . Add Network Port Forwarding in Adapter 1 (NAT) of *default* virtual machine for HTTP and MQTT.
-image:resources/vbox-tcp-{host-name-s}.png[Screenshot of Network settings dialog in VirtualBox]
+image:vbox-tcp-{host-name-s}.png[Screenshot of Network settings dialog in VirtualBox]
 
 
 == Configure Docker
