Fix list of required packages on Ubuntu, add build-essential
Fixes #20

--- a/README.adoc
+++ b/README.adoc
@@ -46,7 +46,7 @@ NOTE: The following procedure has been tested on Ubuntu 16.04 LTS.
 
 .. on Ubuntu:
 +
-    sudo apt-get install git ruby ruby-dev
+    sudo apt-get install git ruby ruby-dev build-essential
 
 . Clone the documentation repository from GitHub:
 +
